--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
     
 }
 #banner{
-    background-image: linear-gradient(rgb(0,0,0,0.5), #ff0000),url(images/banner.jpg);
+    background-image: linear-gradient(rgb(0,0,0,0.5), #00c410),url(images/banner.jpg);
+
     background-size: cover;
     background-position: center;
     height: 100vh;
