--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     
 }
 #banner{
-    background-image: linear-gradient(rgb(0,0,0,0.5), #2fe1f8),url(images/banner.jpg);
+    background-image: linear-gradient(rgb(0,0,0,0.5), #390cff),url(images/banner.jpg);
 
     background-size: cover;
     background-position: center;
