--- a/style.css
+++ b/style.css
@@ -1,41 +1,46 @@
 * {
   margin: 0;
   padding: 0;
-
 }
 
 #banner {
-  background-image: linear-gradient(rgb(0,0,0,0.5), #390cff),url(images/banner.jpg);
+  background-image: linear-gradient(rgb(0,0,0,50%) , #390cff) , url("images/banner.jpg");
   background-size: cover;
   background-position: center;
   height: 100vh;
 }
+
 .logo {
   width: 140px;
   position: absolute;
   top: 4%;
   left: 10%;
 }
+
 .banner-text {
   text-align: center;
   color: #fff;
   padding-top: 100px;
 }
+
 .banner-text h1 {
   font-size: 130px;
-  font-family: 'Kaushan Script', cursive;
+  font-family: "Kaushan Script", cursive;
 }
+
 .banner-text p {
   font-size: 20px;
   font-style: italic;
 }
+
 .banner-btn {
   margin: 75px auto 0;
 }
+
 .banner-btn a {
   width: 150px;
   text-decoration: none;
-  display: inline-block;
+  display: inline-block 0;
   margin: 0 10px;
   padding: 12px 0;
   color: #fff;
@@ -44,23 +49,26 @@
   z-index: 1;
   transition: color 0.5s;
 }
+
 .banner-btn a span {
   width: 0%;
   height: 100%;
-  position: absolute;
+  position: absolute 0;
   top: 0;
   left: 0;
   background: #fff;
   z-index: -1;
   transition: .5s;
-
 }
+
 .banner-btn a:hover span {
   width: 100%;
 }
+
 .banner-btn a:hover {
   color: #000; 
 }
+
 #sideNav {
   width: 250px;
   height: 100vh;
@@ -70,14 +78,17 @@
   background: #009688;
   z-index: 2;
 }
+
 nav ul li {
   list-style: none;
   margin: 50px 20px;
 }
+
 nav ul li a {
 text-decoration: none;
 color: #fff;
 }
+
 #menuBtn {
   width: 20px;
   height: 18px;
@@ -90,6 +101,7 @@ color: #fff;
   z-index: 3;
   cursor: pointer;
 }
+
 #menuBtn img {
   width: 10px;
   margin: top 7px; ;
@@ -98,10 +110,12 @@ color: #fff;
   .banner-text h1 {
   font: size 44px;
 }  
+
 .banner-btn a {
   display: block;
   margin: 20px auto;
 }
+
 }
 
 /*--feature--*/
@@ -109,10 +123,12 @@ color: #fff;
   width:100%;
   padding: 70px 0;
 }
+
 .title-text {
   text-align: center;
   padding-bottom: 70px;
 }
+
 .title-text p {
   margin: auto;
   font-size: 20px;
